--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "fastapi[standard]>=0.120.3",
+    "protobuf>=6.33.0",
     "websockets>=15.0.1",
 ]
