--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  fixnum: ^1.1.1
   flutter:
     sdk: flutter
+  go_router: ^16.3.0
+  http: ^1.5.0
+  protobuf: ^5.1.0
+  shared_preferences: ^2.5.3
+  uuid: ^4.5.2
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.1
 
 flutter:
   uses-material-design: true
