Add game assets

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,3 +26,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/images/food_fridge/
+    - assets/images/food_pantry/
+    - assets/images/players/
+    - assets/images/backgrounds/
