--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,3 +28,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/backgrounds/
+    - assets/images/food/
+    - assets/images/players/
